# heat_capacity

./: CMakeLists.txt  calorimeterscene.cpp  calorimeterscene.h  controlpanelwidget.cpp  controlpanelwidget.h  digitaldisplay.cpp  digitaldisplay.h  experimentwindow.cpp  experimentwindow.h  guidedialog.cpp  guidedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  material.cpp  material.h  methodologydialog.cpp  methodologydialog.h  physicsengine.cpp  physicsengine.h  sample.cpp  sample.h
